--- a/My ER Build - ACS 1700/My Elden Ring Build.html
+++ b/My ER Build - ACS 1700/My Elden Ring Build.html
@@ -58,7 +58,7 @@
                 <!--All my <blockquote> tags are like this.-->
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Night's+Cavalry+Helm">
                     Pitch-black helm with flowing black hair. Worn by the Night’s Cavalry, who ride funeral steeds.
-                    <br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
+                    <br><br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
                 </blockquote>
             </section>
             <section>
@@ -75,9 +75,9 @@
                 </aside>
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Raptor's+Black+Feathers">
-                    Robe crafted with the black feathers of a bird of prey. Worn by the assassins of Ravenmount.  A ritual implement for transforming into a Deathbird, if only by imitation.
-                    <br>Strengthens jump attacks.
-                    <br>“We are birds of prey, bringers of death.”
+                    Robe crafted with the black feathers of a bird of prey. Worn by the assassins of Ravenmount. A ritual implement for transforming into a Deathbird, if only by imitation.
+                    <br><br>Strengthens jump attacks.
+                    <br><br>“We are birds of prey, bringers of death.”
                 </blockquote>
             </section>
             <section>
@@ -89,7 +89,7 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Night's+Cavalry+Gauntlets">
                     Pitch-black gauntlets thinly painted with dried blood. Worn by the Night’s Cavalry, who ride funeral steeds.
-                    <br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
+                    <br><br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
                 </blockquote>
             </section>
             <section>
@@ -101,7 +101,7 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Night's+Cavalry+Greaves">
                     Pitch-black greaves thinly painted with dried blood. Worn by the Night’s Cavalry, who ride funeral steeds.
-                    <br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
+                    <br><br>The Night’s Cavalry, who now wander the dim roads at night, were once led by the Fell Omen and were deliverers of death for great warriors, knights, and champions.
                 </blockquote>
             </section>
             <section>
@@ -126,12 +126,12 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Hoslow's+Petal+Whip">
                     Metal whip formed of razor-sharp chain-link blades that have the appearance of flower petals.
-                    <br>This work of art is handed down through the generations of the illustrious House Hoslow.
-                    <br>High dexterity is required to wield this weapon, but it excels at inflicting devastation.
+                    <br><br>This work of art is handed down through the generations of the illustrious House Hoslow.
+                    <br><br>High dexterity is required to wield this weapon, but it excels at inflicting devastation.
                 </blockquote>
             </section>
             <section>
-                <h3><a id="raptor_of_the_mists"><abbr title="Ash of War">AoW</abbr>: Raptor of the Mists</a></h3>
+                <h3><a id="raptor_of_the_mists"><abbr title="Ash of War">AoW</abbr> Raptor of the Mists</a></h3>
                 <figure>
                     <a href="https://eldenring.wiki.fextralife.com/Ash+of+War:+Raptor+of+the+Mists"><img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/ash_of_war_raptor_of_the_mists_elden_ring_wiki_guide_200px.png" alt="Ash of War:Raptor of the Mists Icon" width="100" height="100"></a>
                     <figcaption><abbr title="Ashe of War">AoW</abbr>:Raptor of the Mists, <cite>Elden Ring</cite></figcaption>
@@ -141,7 +141,9 @@
                 </aside>
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Ash+of+War:+Raptor+of+the+Mists">
-                    This Ash of War grants an armament the Keen affinity and the following skill: “Raptor of the Mists: Duck into a low stance, momentarily vanishing. If an enemy attack connects, avian wings will allow for a quick escape into the air.”
+                    This Ash of War grants an armament the Keen affinity and the following skill:
+                    <br><br>“Raptor of the Mists: Duck into a low stance, momentarily vanishing. If an enemy attack connects, avian wings will allow for a quick escape into the air.”
+                    <br><br>Usable on all melee armaments.
                 </blockquote>
             </section>
             <section>
@@ -156,7 +158,8 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Ash+of+War:+Bloodhound's+Step">
                     This Ash of War grants an armament the Keen affinity and the following skill:
-                    <br>“Bloodhound’s Step: Skill that allows the user to become temporarily invisible while dodging at high speed. Moves faster and travels farther than a regular quickstep. This skill can be used to circle around lock-on targets.”
+                    <br><br>“Bloodhound’s Step: Skill that allows the user to become temporarily invisible while dodging at high speed. Moves faster and travels farther than a regular quickstep. This skill can be used to circle around lock-on targets.”
+                    <br><br>Usable on all melee armaments.
                 </blockquote>
             </section>
             <section>
@@ -171,8 +174,8 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Radagon's+Soreseal">
                     This legendary talisman is an eye engraved with an Elden Rivne, said to be the seal of King Consort Radagon.
-                    <br>Greatly raises visor, endurance, strength, dexterity, but also increases damage taken by similar measure.
-                    <br>Solemn duty weighs upon the one beholden; not unlike a gnawing curse from which there is no deliverance.
+                    <br><br>Greatly raises visor, endurance, strength, dexterity, but also increases damage taken by similar measure.
+                    <br><br>Solemn duty weighs upon the one beholden; not unlike a gnawing curse from which there is no deliverance.
                 </blockquote>
             </section>
             <section>
@@ -187,8 +190,8 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Claw+Talisman">
                     A talisman depicting a claw and an assassin.
-                    <br>Enhances jump attacks.
-                    <br>The assassins of Ravenmount are killers by trade. They assail their victims while dressed as birds of prey.
+                    <br><br>Enhances jump attacks.
+                    <br><br>The assassins of Ravenmount are killers by trade. They assail their victims while dressed as birds of prey.
                 </blockquote>
             </section>
             <section>
@@ -200,8 +203,8 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Carian+Filigreed+Crest">
                     A talisman adorned with the royal crest.
-                    <br>Lowers FP consumed by skills.
-                    <br>An honor said to have once been awarded to Carian knights who served as direct retainers to the kingdom’s princesses. Now there is only one princess: Ranni, daughter of Rennala.
+                    <br><br>Lowers FP consumed by skills.
+                    <br><br>An honor said to have once been awarded to Carian knights who served as direct retainers to the kingdom’s princesses. Now there is only one princess: Ranni, daughter of Rennala.
                 </blockquote>
             </section>
             <section>
@@ -213,8 +216,8 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Lord+of+Blood's+Exultation">
                     A talisman depicting the exultation of the Lord of Blood.
-                    <br>Raises attack power when blood loss occurs in the vicinity.
-                    <br>“Render up you offerings of blood to your Lord. Drench my consort’s chamber. Slake his cocoon’s thirst. His awakening shall herald the dawn of our dynasty”
+                    <br><br>Raises attack power when blood loss occurs in the vicinity.
+                    <br><br>“Render up you offerings of blood to your Lord. Drench my consort’s chamber. Slake his cocoon’s thirst. His awakening shall herald the dawn of our dynasty”
                 </blockquote>
             </section>
             <section>
@@ -226,22 +229,21 @@
                 <p>Item description from <cite>Elden Ring</cite> game:</p>
                 <blockquote cite="https://eldenring.wiki.fextralife.com/Godskin+Swaddling+Cloth">
                     Sacred cloth of the Godskin Apostles, made from supple skin sewn together.
-                    <br>Successive attacks restore HP.
-                    <br>The Gloam-Eyed Queen cradles newborn apostles swaddled in this cloth. Soon they will grow to become the death of the gods.
+                    <br><br>Successive attacks restore HP.
+                    <br><br>The Gloam-Eyed Queen cradles newborn apostles swaddled in this cloth. Soon they will grow to become the death of the gods.
                 </blockquote>
             </section>
         </article>
-        <section>
+        <section class="footer">
             <footer>
                 <h2>Disclosure:</h2>
                 <p>All information here is sourced from Fextralife's <a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki"><cite>Elden Ring</cite> Wiki</a>.</p>
+                <address>
+                    <p>Join my <a href="https://discord.gg/R58xzd3YWp">discord</a> to share your builds and ideas!!
+                    <br><br><a href="mailto:brian.cahill42@gmail.com">Email</a> me with any copyright and sourcing issues regarding this content.
+                    </p>
+                </address>
             </footer>
-            <address>
-                <p>Join my <a href="https://discord.gg/R58xzd3YWp">discord</a> to share your builds and ideas!!
-                    <br>
-                    <a href="mailto:brian.cahill42@gmail.com">Email</a> me with any copyright and sourcing issues regarding this content.
-                </p>
-            </address>
         </section>
     </main>
 </body>
